# jsonref-rs

./: Cargo.toml  README.md
fixtures/nested_relative/: base.json  expected.json  other.json
src/: lib.rs
