[package]
name = "jsonref"
version = "0.1.0"
edition = "2021"
description = "Deref your JSONSchema here!"
license = "MIT"
authors = ["David Raznick <david.raznick@opendataservices.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
url = "2"
