[package]
name = "jsonref"
version = "0.4.0"
edition = "2021"
description = "Deref your JSONSchema here!"
license = "MIT"
authors = ["David Raznick <david.raznick@opendataservices.org>"]
repository = "https://github.com/kindly/jsonref-rs"
homepage = "https://github.com/kindly/jsonref-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json", "charset"] }
url = "2"
snafu = "0.6"
